# threads-ytdlp-extractor

./: .gitignore  README.md  WRITEUP.md  pyproject.toml
.github/workflows/: tests.yml
plugins/threads/yt_dlp_plugins/extractor/: threads.py
tests/: test_threads.py
