[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-threads-extractor"
version = "0.1.0"
description = "Unofficial yt-dlp extractor plugin for public Threads post media"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ThePotato456" },
]
keywords = ["yt-dlp", "yt-dlp-plugins", "threads", "extractor", "downloader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp>=2023.01.02",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/ThePotato456/threads-ytdlp-extractor"
Repository = "https://github.com/ThePotato456/threads-ytdlp-extractor"
Issues = "https://github.com/ThePotato456/threads-ytdlp-extractor/issues"

[tool.setuptools.packages.find]
where = ["plugins/threads"]
include = ["yt_dlp_plugins*"]
namespaces = true
